--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -58,30 +58,34 @@
   }
 }
 
-.swiper-container {
+.portfolioContainer > .swiper-container {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
-.swiper-slide {
+.portfolioContainer > .swiper-slide {
   background-position: center;
   background-size: cover;
   width: 300px;
   height: 450px !important;
 }
 
-.swiper-pagination-bullet-active {
+.portfolioContainer > .swiper-pagination-bullet-active {
   background-color: $firstColor !important;
 }
 
-.swiper-slide .portfolioContent {
+.portfolioContainer > .swiper-slide .portfolioContent {
   display: block;
   width: 100%;
 }
 
 @media screen and (max-width: 650px) {
   .portfolioContent {
-    padding: 0;
+    padding: 0.75rem;
+  }
+
+  .portfolioContainer > .swiper-slide {
+    width: 270px;
   }
 }
