modified some files and added the footer section

--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -1,98 +1,16 @@
 @import "../../styles.scss";
 
-.header {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: $zIndexFixed;
-  background-color: $bodyColor;
-  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-}
-
-.nav {
-  max-width: 968px;
-  height: $headerHeight;
+.footer {
   display: flex;
   justify-content: space-between;
-  align-items: center;  
-}
-
-.nav__logo,
-.nav__toggle {
-  color: $titleColor;
-  font-weight: $fontMedium;
-  font-size: 1rem;
-}
-
-.nav__logo:hover {
-  color: $firstColor;
-}
-
-.nav__toggle {
-  font-size: 1.1rem;
-  cursor: pointer;
-}
-
-.nav__toggle:hover {
-  color: $firstColor;
-}
-
-@media screen and (max-width: 767px) {
-  .nav__menu {
-    position: fixed;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    background-color: $bodyColor;
-    padding: 2rem 1.5rem 4rem;
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 1.5rem 1.5rem 0 0;
-    transition: 0.5s;
-    z-index: 20;
-  }
-
-  /* Show Menu */
-  .show__menu {
-    bottom: 0;
-    z-index: 1000;
-  }
-}
-
-.nav__list {
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-}
-
-.nav__link {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  font-size: var(--small-font-size);
-  color: var(--title-color);
-  font-weight: var(--font-medium);
 }
 
-.nav__link:hover {
-  color: var(--first-color);
-}
-
-.nav__icon {
-  font-size: 1.2rem;
-  margin-bottom: 5px;
-}
-
-.nav__close {
-  position: absolute;
-  right: 1.3rem;
-  bottom: 0.5rem;
-  font-size: 1.5rem;
+.githubIcon,
+.linkedinIcon {
   cursor: pointer;
-  color: var(--first-color);
 }
 
-.nav__close:hover {
-  color: var(--first-color-alt);
+.githubIcon {
+  margin-right: 0.75rem;
 }
-
-/* Menu show Y hidden */
