--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,7 +18,7 @@
 
 .home__social__icon {
   font-size: 1.25rem;
-  color: $firstColor;  
+  color: $firstColor;
 }
 
 .home__social__icon:hover {
@@ -31,13 +31,13 @@
 }
 
 .home__data {
-grid-column: 1/3;
+  grid-column: 1/3;
 
-h3 {
-  span {
-    color: $firstColor;
+  h3 {
+    span {
+      color: $firstColor;
+    }
   }
-}
 
   .myButton {
     display: flex;
@@ -62,16 +62,25 @@ h3 {
   }
 }
 
-.home__title {
+.homeTitle {
   font-size: $bigFontSize;
   color: $titleColor;
 }
 
-.home__subtitle {
+.homeTitleDark {
+  font-size: $bigFontSize;
+  color: $bodyColor;
+}
+
+.homeSubtitle {
   font-size: $h3FontSize;
-  color: $textColor;
+  // color: $textColor;
   font-weight: $fontMedium;
   margin-bottom: $mb075;
+}
+
+.subtitleDark {
+  color: $bodyColor;
 }
 
 .description {
