set the responsive views

--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -14,3 +14,15 @@
 .githubIcon {
   margin-right: 0.75rem;
 }
+
+@media screen and (min-width: 768px) {
+  .footer {
+    padding: 0 1rema;
+  }  
+}
+
+// @media screen and (min-width: 1024px) {
+//   .footer {    
+//     padding: 0;
+//   }  
+// }
