--- a/src/pages/skills/skills.scss
+++ b/src/pages/skills/skills.scss
@@ -142,3 +142,15 @@
     transition: 1s;
   }
 }
+
+@media screen and (min-width: 560px) {
+  .skillsContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1250px) {
+  .skillsContainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
