--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -9,6 +9,15 @@
   background-color: $bodyColor;
 }
 
+.headerDark {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: $zIndexFixed;
+  background-color: $firstColor;
+}
+
 .header.scroll {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
@@ -49,7 +58,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .nav__menu {
+  .navMenu {
     position: fixed;
     bottom: -100%;
     left: 0;
@@ -69,7 +78,8 @@
   }
 }
 
-.nav__list {
+.navList {
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
@@ -87,7 +97,7 @@
   color: $firstColor;
 }
 
-.nav__icon {
+.navIcon {
   font-size: 1.2rem;
   margin-bottom: 5px;
 }
@@ -103,4 +113,43 @@
 
 .navClose:hover {
   color: $firstColorAlt;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    top: 0;
+    bottom: initial;
+    padding: 0 1rem;
+  }
+
+  .nav {
+    height: cal($headerHeight + 1.5rem);
+    column-gap: 1rem;
+  }
+
+  .navIcon,
+  .navToggleIcon,
+  .navClose {
+    display: none;
+  }
+
+  .changeTheme {
+    color: $titleColor;
+    margin: 0;
+  }
+
+  .navList {
+    display: flex;
+    column-gap: 2rem;
+  }
+
+  .navMenu {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header {    
+    padding: 0;
+  }  
 }
