--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -76,7 +76,7 @@
   height: 450px !important;
 }
 
-.portfolioContainer .swiper-pagination-bullet-active {
+ .swiper-pagination-bullet-active {
   background-color: $firstColor !important;
 }
 
