--- a/src/pages/testimnoials/testimonials.scss
+++ b/src/pages/testimnoials/testimonials.scss
@@ -23,12 +23,17 @@
 }
 
 .nameSection {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem;  
 }
 
 .testimonialName {
   font-size: $h3FontSize;
   font-weight: $fontMedium;
+}
+
+.testimonialNameDark,
+.testimonialBusinessDark {
+  color: $bodyColor;
 }
 
 .testimonialBusiness {
@@ -53,7 +58,6 @@
 
     .swiper-slide {
       font-size: 18px;
-      background: #fff;
       margin: 1rem 0 2rem;
       padding: 1rem;
       border-radius: 10px;
