--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -7,7 +7,6 @@
 
 .servicesContent {
   position: relative;
-  // background-color: $containerColor;
   padding: 2.5rem 0.5rem 1.25rem 1.5rem;
   border-radius: 0.25rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -145,6 +144,7 @@
   visibility: visible;
 }
 
+// Responsive stles
 @media screen and (max-width: 350px) {
   .servicesContainer {
     gap: 1rem;
