--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -66,7 +66,7 @@
   font-size: $bigFontSize;
   color: $titleColor;
 
-  // Make the title text smaller for small screen sizes 
+  // Make the title text smaller for small screen sizes
   @media screen and (max-width: 350px) {
     font-size: 1.8rem;
   }
@@ -146,8 +146,30 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .homeContent {
+    padding-top: 0.5rem;
+    column-gap: 2rem;
+  }
+
+  .homeTitle {
+    font-size: 4rem;
+    color: rgb(14, 14, 14);
+  }
+
+  .homeTitleDark {
+    font-size: 4rem;
+  }
+
+  .homeSubtitle {
+    font-size: 1.5rem;
+  }
+
+  .description {
+    font-size: 1.2rem;
+  }
+
   .homeBlob {
-    width: 450px;
+    width: 550px;
   }
 
   .homeSocial {
