--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -58,12 +58,14 @@
     justify-content: center;
     padding: 8px 10px;
     width: 160px;
+    height: 40px;
     background-color: $firstColor;
     color: white;
     border-radius: 8px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
     transition: 1s;
     border: none;
+    cursor: pointer;
 
     .messageIcon {
       margin-left: 4px;
