--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -49,7 +49,7 @@
     font-size: $normalFontSize;
     border: none;
     outline: none;
-    padding: 0.5rem;
+    padding: 0.5rem 0;
   }
 
   button {
