--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -1,22 +1,36 @@
 @import "../../styles.scss";
 
 .footer {
+  background-color: $firstColor;
+  width: 100%;
+  padding: 15px 0;
+  margin-top: 20px;
+}
+.footer-wrapper {
+  color: $containerColor;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 1rem;
+}
+
+.footer span {
+  font-style: italic;
 }
 
 .githubIcon,
 .linkedinIcon {
   cursor: pointer;
+  color: $containerColor;
 }
 
 .githubIcon {
   margin-right: 0.75rem;
 }
 
-@media screen and (min-width: 768px) {
-  .footer {
-    padding: 0 1rema;
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .footer {
+//     padding: 0 1rema;
+//   }
+// }
