--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -120,7 +120,7 @@
   }
 
   .nav {
-    height: cal($headerHeight + 1.5rem);
+    height: calc($headerHeight + 1.5rem);
     column-gap: 1rem;
   }
 
